[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scripts/CharacterCustomisation.gd" type="Script" id=1]
[ext_resource path="res://Materials/DarkWood.material" type="Material" id=2]
[ext_resource path="res://Materials/MetalDark.material" type="Material" id=3]
[ext_resource path="res://Scenes/Customisation/CustomisationUI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Characters/Players/Armatures/Armature-M.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Characters/Players/Armatures/Armature-F.tscn" type="PackedScene" id=6]

[sub_resource type="CylinderMesh" id=1]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
top_radius = 1.0
bottom_radius = 1.0
height = 2.0
radial_segments = 64
rings = 4

[sub_resource type="PlaneMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 2, 2 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="SphereMesh" id=3]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
radius = 1.0
height = 2.0
radial_segments = 64
rings = 32
is_hemisphere = false

[sub_resource type="SpatialMaterial" id=4]

render_priority = 0
flags_transparent = false
flags_unshaded = false
flags_vertex_lighting = false
flags_no_depth_test = false
flags_use_point_size = false
flags_world_triplanar = false
flags_fixed_size = false
flags_albedo_tex_force_srgb = false
vertex_color_use_as_albedo = false
vertex_color_is_srgb = false
params_diffuse_mode = 0
params_specular_mode = 0
params_blend_mode = 0
params_cull_mode = 1
params_depth_draw_mode = 0
params_line_width = 1.0
params_point_size = 1.0
params_billboard_mode = 0
params_grow = false
params_use_alpha_scissor = false
albedo_color = Color( 0.722656, 0.0988007, 0.0988007, 1 )
metallic = 0.0
metallic_specular = 0.5
metallic_texture_channel = 0
roughness = 1.0
roughness_texture_channel = 0
emission_enabled = false
normal_enabled = false
rim_enabled = false
clearcoat_enabled = false
anisotropy_enabled = false
ao_enabled = false
depth_enabled = false
subsurf_scatter_enabled = false
transmission_enabled = false
refraction_enabled = false
detail_enabled = false
uv1_scale = Vector3( 1, 1, 1 )
uv1_offset = Vector3( 0, 0, 0 )
uv1_triplanar = false
uv1_triplanar_sharpness = 1.0
uv2_scale = Vector3( 1, 1, 1 )
uv2_offset = Vector3( 0, 0, 0 )
uv2_triplanar = false
uv2_triplanar_sharpness = 1.0
proximity_fade_enable = false
distance_fade_enable = false
_sections_unfolded = [ "Albedo", "Roughness" ]

[node name="CharacterCustomisation" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="Scenary" type="Node" parent="." index="0"]

editor/display_folded = true

[node name="Podium" type="MeshInstance" parent="Scenary" index="0"]

transform = Transform( 1, 0, 0, 0, 0.110258, 0, 0, 0, 1, 0, -0.0621398, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 1 )
skeleton = NodePath("..")
material/0 = ExtResource( 2 )
_sections_unfolded = [ "material" ]

[node name="Floor" type="MeshInstance" parent="Scenary" index="1"]

transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, -0.160182, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = ExtResource( 3 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Wall" type="MeshInstance" parent="Scenary" index="2"]

transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = SubResource( 4 )
_sections_unfolded = [ "Transform", "material" ]

[node name="Lights" type="Node" parent="." index="1"]

editor/display_folded = true

[node name="FillLight" type="SpotLight" parent="Lights" index="0"]

transform = Transform( 0.857588, 0.172652, -0.484493, 0, 0.941977, 0.335679, 0.514336, -0.287874, 0.807828, -1.60445, 2.93291, 2.70207 )
layers = 1
light_color = Color( 0.707031, 0.446598, 0.237518, 1 )
light_energy = 3.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 5.0
spot_attenuation = 1.0
spot_angle = 45.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Light" ]

[node name="KeyLight" type="SpotLight" parent="Lights" index="1"]

transform = Transform( 0.795721, 0, 0.605663, 0, 1, 0, -0.605663, 0, 0.795721, 1.67211, 1.98348, 2.4555 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 2.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 5.0
spot_attenuation = 1.0
spot_angle = 45.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Light" ]

[node name="BackLight" type="SpotLight" parent="Lights" index="2"]

transform = Transform( -1, 5.56537e-005, -0.000148875, 0, 0.93669, 0.35016, 0.000158938, 0.35016, -0.93669, 0, 3.35052, -3.46816 )
layers = 1
light_color = Color( 0.0875854, 0.234702, 0.546875, 1 )
light_energy = 4.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 5.0
spot_attenuation = 1.0
spot_angle = 45.0
spot_angle_attenuation = 1.0
_sections_unfolded = [ "Light" ]

[node name="Birdie" type="SpotLight" parent="Lights" index="3"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 1, -1.343, -9.39944 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 8.15655
spot_attenuation = 1.0
spot_angle = 18.9254
spot_angle_attenuation = 1.0

[node name="Birdie2" type="SpotLight" parent="Lights" index="4"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, -1, -1.343, -9.39944 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 8.15655
spot_attenuation = 1.0
spot_angle = 18.9254
spot_angle_attenuation = 1.0

[node name="Birdie3" type="SpotLight" parent="Lights" index="5"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, -3, -1.343, -9.39944 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 8.15655
spot_attenuation = 1.0
spot_angle = 18.9254
spot_angle_attenuation = 1.0

[node name="Birdie4" type="SpotLight" parent="Lights" index="6"]

transform = Transform( 1, 0, 0, 0, -4.37114e-008, -1, 0, 1, -4.37114e-008, 3, -1.343, -9.39944 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.15
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
spot_range = 8.15655
spot_attenuation = 1.0
spot_angle = 18.9254
spot_angle_attenuation = 1.0

[node name="DirectionalLight" type="DirectionalLight" parent="Lights" index="7"]

transform = Transform( 0.70704, 0.705856, -0.0431423, 0, 0.0610067, 0.998137, 0.707173, -0.705723, 0.0431342, -7.73286, 9.71574, 1.75156 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 1.0
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.1
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 200.0

[node name="Camera" type="Camera" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 0.992125, -0.125249, 0, 0.125249, 0.992125, 0, 0.650144, 2.70015 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="CustomisationUI" parent="." index="3" instance=ExtResource( 4 )]

[node name="CharacterSelect" parent="CustomisationUI/Controls" index="1"]

text = "Freya"
items = [ "Freya", null, false, 0, null, "Frey", null, false, 1, null ]

[node name="ArmatureM" parent="." index="4" instance=ExtResource( 5 )]

transform = Transform( 0.25, 0, 0, 0, -1.09278e-008, -0.25, 0, 0.25, -1.09278e-008, 0, 0.1, 0 )

[node name="AnimationTreePlayer" parent="ArmatureM" index="2"]

data = {
"active": true,
"connections": [ "Action", "out", 0, "IdleAnim", "Move", 0, "RunAnim", "Move", 1, "ThrowAnim", "Action", 0, "Move", "Action", 1, "ReloadAnim", "Action", 2 ],
"master": NodePath("../AnimationPlayer"),
"nodes": [ {
"id": "out",
"position": Vector2( 893, 144 ),
"type": "output"
}, {
"blend": 0.0,
"filter": [  ],
"id": "Move",
"position": Vector2( 307, 166 ),
"type": "blend2"
}, {
"filter": [  ],
"from": "Run",
"id": "RunAnim",
"position": Vector2( 43, 255 ),
"type": "animation"
}, {
"filter": [  ],
"from": "Working",
"id": "ReloadAnim",
"position": Vector2( 434, 318 ),
"type": "animation"
}, {
"filter": [  ],
"from": "Idle",
"id": "IdleAnim",
"position": Vector2( 52, 85 ),
"type": "animation"
}, {
"blend": 0.05,
"id": "Action",
"position": Vector2( 685, 135 ),
"type": "blend3"
}, {
"filter": [  ],
"from": "Punch",
"id": "ThrowAnim",
"position": Vector2( 384, 5 ),
"type": "animation"
} ]
}

[node name="ArmatureF" parent="." index="5" instance=ExtResource( 6 )]

transform = Transform( 0.004, 0, 0, 0, 0.004, 0, 0, 0, 0.004, 0, 0.1, 0 )

[node name="AnimationTreePlayer" parent="ArmatureF" index="2"]

data = {
"active": true,
"connections": [ "Action", "out", 0, "IdleAnim", "Move", 0, "RunAnim", "Move", 1, "ThrowAnim", "Action", 0, "Move", "Action", 1, "ReloadAnim", "Action", 2 ],
"master": NodePath("../AnimationPlayer"),
"nodes": [ {
"id": "out",
"position": Vector2( 893, 144 ),
"type": "output"
}, {
"blend": 0.0,
"filter": [  ],
"id": "Move",
"position": Vector2( 307, 166 ),
"type": "blend2"
}, {
"filter": [  ],
"from": "Running",
"id": "RunAnim",
"position": Vector2( 43, 255 ),
"type": "animation"
}, {
"filter": [  ],
"from": "PickUp",
"id": "ReloadAnim",
"position": Vector2( 434, 318 ),
"type": "animation"
}, {
"filter": [  ],
"from": "Idle",
"id": "IdleAnim",
"position": Vector2( 52, 85 ),
"type": "animation"
}, {
"blend": 0.05,
"id": "Action",
"position": Vector2( 685, 135 ),
"type": "blend3"
}, {
"filter": [  ],
"from": "Punch",
"id": "ThrowAnim",
"position": Vector2( 384, 5 ),
"type": "animation"
} ]
}

[connection signal="item_selected" from="CustomisationUI/Controls/CharacterSelect" to="." method="_on_CharacterSelect_item_selected"]

[connection signal="pressed" from="CustomisationUI/Controls/HBoxContainer/LeftButton" to="." method="change_material" binds= [ "Left" ]]

[connection signal="pressed" from="CustomisationUI/Controls/HBoxContainer/RightButton" to="." method="change_material" binds= [ "Right" ]]

[connection signal="pressed" from="CustomisationUI/Controls/HBoxContainer2/StartButton" to="." method="_on_StartButton_pressed"]


[editable path="CustomisationUI"]
[editable path="ArmatureM"]
[editable path="ArmatureF"]
